1: Create XING Connector
Task-Url: http://github.com/keilw/agorava-xing/issues/issue/1